Move selection update logic to SelectionContext